# Soul-Bass

./: .gitignore  CMakeLists.txt
.claude/: settings.local.json
.github/workflows/: build.yml
SoulBass/: BUILD_AND_TEST.md  COMPONENT_LAYOUT.md  FIXES_APPLIED.md  RENDERING_FIXES.md  RENDERING_GUIDE.md  quick_build.bat  test_rendering.bat
SoulBass/Source/: ImageAssetVerifier.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoulLookAndFeel.h  SoulSampler.h
